[tool.poetry]
name = "CTOD"
version = "1.0.0"
description = "Cesium Terrain On Demand"
authors = ["tebben <ebben.tim@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
start = "start_server:main"
dev = "start_server:main_dev"
seed_cache = "scripts.seed_cache:main"

[tool.poetry.dependencies]
python = "^3.10"
morecantile = "^5.2.2"
rio-tiler = "6.6.1"
pydelatin = "^0.2.7"
pymartini = "^0.4.4"
quantized-mesh-encoder = "^0.4.3"
fastapi = "^0.109.2"
triangle = "^20230923"
lxml = "^5.1.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
requests = "^2.31.0"
psutil = "^5.9.8"
pyee = "^11.1.0"
aiosqlite = "^0.20.0"
aiohttp = "^3.9.3"
aiofiles = "^23.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
